<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/RelativeLayout1"
    android:weightSum="4"
    tools:context="com.inc.miki.filozofski_falutet_pale.MainActivity">


    <TextView
        android:layout_width="wrap_content"
        android:id="@+id/textureView"
        android:layout_weight="0.20"
        android:layout_gravity="center"
        android:text="@string/searchBy"
        android:textSize="20sp"
        android:layout_height="wrap_content" />
    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/studyProgramTextView"
        android:layout_weight="0.20"
        android:layout_gravity="center"
        android:text="@string/searchByStudyPrograms"
        android:textSize="20sp"/>
    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/TeacherTextView"
        android:layout_weight="0.20"
        android:layout_gravity="center"
        android:text="@string/searchByTeachers"
        android:textSize="20sp" />
    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/ClassRoomTextView"
        android:layout_weight="0.20"
        android:layout_gravity="center"
        android:text="@string/searchByClassRooms"
        android:textSize="20sp"/>
    <LinearLayout
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:layout_width="300dp">


        <TextView
            android:text="@string/StudyPrograms"
            android:layout_height="wrap_content"
            android:id="@+id/schedulesButton"
            android:layout_weight="1"
            android:layout_marginRight="1dp"
            android:layout_width="150dp" />

        <Spinner
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:id="@+id/spinner" />

    </LinearLayout>


    </LinearLayout>
