<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/RelativeLayout1"
    android:weightSum="4"
    tools:context="com.inc.miki.filozofski_falutet_pale.MainActivity">


    <TextView
        android:layout_width="wrap_content"
        android:id="@+id/textureView"
        android:layout_weight="0.30"
        android:layout_gravity="center"
        android:text="@string/wellcome"
        android:textSize="20sp"
        android:layout_height="wrap_content" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="298dp"
        app:srcCompat="@drawable/filozofski"
        android:id="@+id/imageView" />
    <LinearLayout
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_gravity="center"
        android:layout_width="300dp">


        <Button
            android:text="@string/schedules"
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:id="@+id/schedulesButton"
            android:background="#428bca"
            android:layout_weight="1"
            android:layout_marginRight="1dp"
            android:textColor="@android:color/white"
            android:onClick="GoToSchedules" />

        <Button
            android:text="@string/login"
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:id="@+id/loginButton"
            android:background="#428bca"
            android:layout_weight="1"
            android:layout_marginLeft="1dp"
            android:textColor="@android:color/white"/>

    </LinearLayout>


</LinearLayout>
